--- a/madLibs/madLibs/Base.lproj/LaunchScreen.storyboard
+++ b/madLibs/madLibs/Base.lproj/LaunchScreen.storyboard
@@ -20,23 +20,21 @@
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wXt-fV-XMh">
                                 <rect key="frame" x="50" y="87" width="500" height="200"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="madlibs.png" translatesAutoresizingMaskIntoConstraints="NO" id="D1b-YC-KkG">
-                                        <rect key="frame" x="242" y="0.0" width="16" height="200"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="madlibs.png" translatesAutoresizingMaskIntoConstraints="NO" id="D1b-YC-KkG">
+                                        <rect key="frame" x="109" y="0.0" width="282" height="200"/>
                                         <animations/>
                                     </imageView>
                                 </subviews>
                                 <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="5HN-yU-Ic7"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wXt-fV-XMh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="67" id="LqW-DE-gvr"/>
-                            <constraint firstItem="wXt-fV-XMh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="30" id="P7U-p4-DlN"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wXt-fV-XMh" secondAttribute="trailing" constant="30" id="w4E-89-NBJ"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="wXt-fV-XMh" secondAttribute="bottom" constant="313" id="05m-9f-9Tv"/>
+                            <constraint firstItem="wXt-fV-XMh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="33n-jL-v4r"/>
+                            <constraint firstItem="wXt-fV-XMh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="30" id="H3k-S0-HOD"/>
+                            <constraint firstItem="wXt-fV-XMh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="67" id="o9c-SB-bVh"/>
                         </constraints>
                     </view>
                 </viewController>
