fixed ghost first entrance “continue game” mishap

--- a/ghost/ghost/Base.lproj/Main.storyboard
+++ b/ghost/ghost/Base.lproj/Main.storyboard
@@ -949,9 +949,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Hhn-tB-uAH"/>
-        <segue reference="j0P-OH-W7t"/>
-        <segue reference="S75-fF-S7K"/>
+        <segue reference="dg5-MS-spi"/>
+        <segue reference="nXr-og-McL"/>
         <segue reference="j8r-Kp-CSc"/>
+        <segue reference="S75-fF-S7K"/>
     </inferredMetricsTieBreakers>
 </document>
