--- a/ghost/ghost/Base.lproj/LaunchScreen.storyboard
+++ b/ghost/ghost/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redGhost.png" translatesAutoresizingMaskIntoConstraints="NO" id="qIJ-q1-jyq">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redGhost.png" translatesAutoresizingMaskIntoConstraints="NO" id="qIJ-q1-jyq">
                                 <rect key="frame" x="20" y="20" width="560" height="560"/>
                                 <animations/>
                             </imageView>
